# voxlife

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
lib/: CMakeLists.txt
scripts/: changelevel.lua
scripts/cmake/: assemble_cube_maps.cmake  assemble_images.cmake
scripts/teardown/: changelevel.lua
scripts/teardown-mod/: changelevel.lua  characters.txt  info.txt  main.xml  menu.lua  tools.lua
scripts/teardown-mod/characters/: headcrab.vox
scripts/teardown-mod/characters/assassin/: model.vox  prefab.xml
scripts/teardown-mod/characters/barney/: animation.lua  model.vox  prefab.xml
scripts/teardown-mod/characters/gman/: model.vox  prefab.xml
scripts/teardown-mod/characters/gordon/: model.vox  prefab.xml
scripts/teardown-mod/characters/marines/: animation.lua  model.vox  prefab-commander.xml  prefab-grunt-dark.xml  prefab-grunt.xml  prefab-m203.xml  prefab-shotgunner-dark.xml  prefab-shotgunner.xml
scripts/teardown-mod/characters/scientists/: animation.lua  model.vox  prefab-einstein.xml  prefab-gordon.xml  prefab-luther.xml  prefab-nerd.xml  prefab-slick.xml
scripts/teardown-mod/characters/vortigaunt/: animation.lua  model.vox  posed.vox  prefab.xml
scripts/teardown-mod/tools/: old.lua  weapon.lua
scripts/teardown-mod/tools/glock/: main.lua  model.vox  prefab.xml
scripts/teardown-mod/tools/gluon/: model.vox  prefab.xml
scripts/teardown-mod/tools/old/: crossbow.vox  crowbar.vox  glock.vox  mp5.vox  revolver.vox  shotgun.vox
scripts/teardown-mod/tools/revolver/: main.lua  model.vox  prefab.xml
scripts/teardown-mod/tools/tau/: main.lua  model.vox  prefab.xml
src/: CMakeLists.txt  main.cpp
src/bsp/: primitives.h  read_entities.cpp  read_file.cpp  read_file.h  read_file_info.h  readfile.cpp  readfile.h  readfile_info.h
src/hl1/: entities.h  read_entities.cpp  read_entities.h  read_level.cpp  read_level.h
src/utils/: wrapping_iterator.h
src/voxel/: cooridnates.h  rasterize_polygon.cpp  rasterize_polygon.h  test.cpp  test.h  voxelize_bsp.cpp  voxelize_bsp.h  voxelize_polygon.cpp  voxelize_polygon.h  write_file.cpp  write_file.h  writefile.cpp  writefile.h
src/voxel/shaders/: box_draw.glsl  common.glsl  main.glsl  shared.inl  voxelize.glsl
src/voxel/test/: application.cpp  application.h  player.hpp
src/wad/: primitives.h  read_file.cpp  read_file.h  readfile.cpp  readfile.h
